--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <cite>&#8213; Max Blecher, Adventures in Immediate Unreality</cite>
    <br><br>
    <center>
-     <img src="valdg/0.JPG">
+     <img src="0.JPG">
    </center>
   </body>
 </html>
